# distributed-programming

dfs/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  dfs_client  dfs_client.c  dfs_local  dfs_local.c  dfs_server  dfs_server.c  types.h
raft/: 0  1  2  CMakeCache.txt  CMakeLists.txt  Makefile  a.out  cmake_install.cmake  ip_addr.txt  ofi+tcp:__172.18.0.2:38256  ofi+tcp:__172.18.0.3:38255  ofi+tcp:__172.18.0.5:38257  raft_client  raft_client.c  raft_server  raft_server.c  test-s.c  test_file.c  test_rand.c  test_str.c  types.h
ring/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  ring  ring.c
sample/: client.c  ring.c
